Fix gap

--- a/src/Components/Home/Home.scss
+++ b/src/Components/Home/Home.scss
@@ -10,9 +10,8 @@
   .cards {
     display: flex;
     flex-wrap: wrap;
-    gap: 30px;
+    gap: 20px;
     width: 100%;
     padding: 20px;
-    justify-content: space-between;
   }
 }
